--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11745,7 +11745,7 @@ section {
  * Last Build: Tue Nov 14 2017 12:40:57
  */
 .device-wrapper {
-  max-width: 300px;
+  max-width: 500px;
   width: 100%;
 }
 
@@ -11848,7 +11848,7 @@ section.cta:before {
   height: 1rem;
   width: 1rem;
   transform: rotate(10deg);
-  fill: #2937f0;
+  fill: #a8e890;
   top: 15%;
   right: 10%;
 }
@@ -11856,12 +11856,12 @@ section.cta:before {
   position: absolute;
   height: 0.75rem;
   width: 0.75rem;
-  fill: #2937f0;
+  fill: #a8e890;
   bottom: 15%;
   left: 10%;
 }
 .features-device-mockup .device-wrapper {
-  max-width: 10rem;
+  /* max-width: 10rem; */
 }
 
 @media (min-width: 576px) {
@@ -11952,10 +11952,10 @@ footer a:focus {
   display: none;
 }
 .masthead .masthead-device-mockup .circle .gradient-start-color {
-  stop-color: #2937f0;
+  stop-color: #a8e890;
 }
 .masthead .masthead-device-mockup .circle .gradient-end-color {
-  stop-color: #9f1ae2;
+  stop-color: #a8e890;
 }
 .masthead .masthead-device-mockup .shape-1 {
   position: absolute;
@@ -11975,7 +11975,7 @@ footer a:focus {
   right: 10%;
 }
 .masthead .masthead-device-mockup .device-wrapper {
-  max-width: 10rem;
+  max-width: 100%;
 }
 @media (min-width: 576px) {
   .masthead .masthead-device-mockup .circle {
