--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,7 +96,7 @@
 }
 
 body {
-  font-family: var(--bs-body-font-family);
+  font-family: "Montserrat", sans-serif;
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
   line-height: var(--bs-body-line-height);
@@ -105,8 +105,6 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  min-height: 100vh;
-  min-width: 100vw;
 }
 
 hr {
