--- a/styles/globals.css
+++ b/styles/globals.css
@@ -147,34 +147,39 @@ h1,
 
 /* Smaller than standard 960 (devices and browsers) */
 @media only screen and (min-width: 959px) {
-  h1 {
+  h1,
+  h2 {
     font-size: 60px;
   }
 }
 
 @media only screen and (max-width: 1400px) {
-  h1 {
+  h1,
+  h2 {
     font-size: 60px;
   }
 }
 
 /* Tablet Portrait size to standard 960 (devices and browsers) */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
-  h1 {
+  h1,
+  h2 {
     font-size: 60px;
   }
 }
 
 /* All Mobile Sizes (devices and browser) */
 @media only screen and (max-width: 767px) {
-  h1 {
+  h1,
+  h2 {
     font-size: 34px;
   }
 }
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
-  h1 {
+  h1,
+  h2 {
     font-size: 34px;
   }
 }
@@ -182,7 +187,7 @@ h1,
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {
   p {
-    font-size: 34px;
+    font-size: 24px;
   }
 }
 
